# atlassian_cli

./: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json  tools.md
.claude/agents/: lib-builder.md  mcp-builder.md
.claude/rules/: data-layer.md  error-handling.md  imports.md  naming.md  typing.md  workflow.md
.claude/skills/: acli-check.md  build.md  e2e.md  lint.md  test.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: acli-usage-guide.md  package-design-brainstorm.md
src/pyacli/: __init__.py
src/pyacli/lib/: client.py  dto.py  exceptions.py  runner.py  schemas.py
src/pyacli/mcp/: __init__.py  server.py
tests/: conftest.py
tests/lib/: test_client.py  test_dto.py  test_exceptions.py  test_runner.py  test_schemas.py
tests/mcp/: test_server.py
