[project]
name = "pyacli"
version = "0.0.0"
description = "Python async wrapper for Atlassian CLI (acli)"
authors = [
    {name = "kknaks"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic>=2.0,<3.0",
    "mcp>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
pyacli-mcp = "pyacli.mcp:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
packages = [{include = "pyacli", from = "src"}]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
pattern = "^v(?P<base>\\d+\\.\\d+\\.\\d+)"

[tool.poetry-dynamic-versioning.substitution]
files = ["src/pyacli/__init__.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
